--- a/category-beach.html
+++ b/category-beach.html
@@ -165,7 +165,12 @@
 			    <h3>Ocean Beach</h3>
 			  </div>
 			  <div class="modal-body">
-			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo at felis vitae facilisis. Cras volutpat fringilla nunc vitae hendrerit. Donec porta id augue quis sodales. Sed sit amet metus ornare, mattis sem at, dignissim arcu. Cras rhoncus ornare mollis. Ut tempor augue mi, sed luctus neque luctus non. Vestibulum mollis tristique blandit. Aenean condimentum in leo ac feugiat. Sed posuere, est at eleifend suscipit, erat ante pretium turpis, eget semper ex risus nec dolor. Etiam pellentesque nulla neque, ut ullamcorper purus facilisis at. Nam imperdiet arcu felis, eu placerat risus dapibus sit amet. Praesent at justo at lectus scelerisque mollis. Mauris molestie mattis tellus ut facilisis. Sed vel ligula ornare, posuere velit ornare, consectetur erat.
+			    <p>Ocean Beach is a beach that runs along the west coast of San Francisco, California, United States, at the Pacific Ocean. It is adjacent to Golden Gate Park, the Richmond District, and the Sunset District. The Great Highway runs alongside the beach, and the Cliff House and the site of the former Sutro Baths sit at the northern end. The beach is a part of the Golden Gate National Recreation Area, which is administered by the National Park Service.
+
+During the late spring and summer, San Francisco's characteristic foggy weather frequently envelops the beach. The average temperature for last 5 years has been 55.8 °F .However, the beach is popular with surfers and participants in bonfire parties.[citation needed] More beach-friendly weather occurs in late fall and early spring, when fog is less prevalent.
+
+The water at Ocean Beach is noteworthy for its strong currents and waves, which makes it popular among serious surfers. The water is cold, due in part to a process known as upwelling, in which frigid water from below the ocean surface rises to replace the surface water that moves away from the beach as a result of the Coriolis effect. The rapid rip currents and cold water make the ocean dangerous for casual swimmers and even those who simply want to set foot in it, and swimmers have been swept away and drowned. Nevertheless, the beach is one of the Bay Area's top surfingspots. The southern portion of the beach by Sloat Boulevard is one of the cleanest in the state
+
 			    </p>
 			  </div>
 			</div>
@@ -179,7 +184,11 @@
 			    <h3>Long Beach</h3>
 			  </div>
 			  <div class="modal-body">
-			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo at felis vitae facilisis. Cras volutpat fringilla nunc vitae hendrerit. Donec porta id augue quis sodales. Sed sit amet metus ornare, mattis sem at, dignissim arcu. Cras rhoncus ornare mollis. Ut tempor augue mi, sed luctus neque luctus non. Vestibulum mollis tristique blandit. Aenean condimentum in leo ac feugiat. Sed posuere, est at eleifend suscipit, erat ante pretium turpis, eget semper ex risus nec dolor. Etiam pellentesque nulla neque, ut ullamcorper purus facilisis at. Nam imperdiet arcu felis, eu placerat risus dapibus sit amet. Praesent at justo at lectus scelerisque mollis. Mauris molestie mattis tellus ut facilisis. Sed vel ligula ornare, posuere velit ornare, consectetur erat.</p>
+			    <p>Long Beach is a city in Los Angeles County in Southern California, on the Pacific coast of the United States. The city is the 36th-largest city in the United States and the seventh-largest inCalifornia. As of 2010, its population was 462,257.In addition, Long Beach is the second largest city in the Greater Los Angeles Area (after Los Angeles) and a principal city of the Los Angeles-Long Beach-Anaheim, CA Metropolitan Statistical Area.
+
+The Port of Long Beach is the United States' second busiest container port and one of the world's largest shipping ports.The city also maintains a large oil industry with wells located both underground and offshore. Manufacturing sectors include those in aircraft, car parts, electronic and audiovisual equipment, and home furnishings.
+
+Downtown Long Beach is located approximately 22 miles (35 km) south of Downtown Los Angeles, though the two cities border each other for several miles on Long Beach's southwestern portion. Long Beach borders Orange County on its southeast edge.</p>
 			  </div>
 			</div>
 		</section>
@@ -192,7 +201,7 @@
 			    <h3>Vallejo Beach</h3>
 			  </div>
 			  <div class="modal-body">
-			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo at felis vitae facilisis. Cras volutpat fringilla nunc vitae hendrerit. Donec porta id augue quis sodales. Sed sit amet metus ornare, mattis sem at, dignissim arcu. Cras rhoncus ornare mollis. Ut tempor augue mi, sed luctus neque luctus non. Vestibulum mollis tristique blandit. Aenean condimentum in leo ac feugiat. Sed posuere, est at eleifend suscipit, erat ante pretium turpis, eget semper ex risus nec dolor. Etiam pellentesque nulla neque, ut ullamcorper purus facilisis at. Nam imperdiet arcu felis, eu placerat risus dapibus sit amet. Praesent at justo at lectus scelerisque mollis. Mauris molestie mattis tellus ut facilisis. Sed vel ligula ornare, posuere velit ornare, consectetur erat.</p>
+			    <p>Vallejo, CA is located in Solano County in Northern California. We have 1,016 businesses listed for Vallejo and below you'll find links to restaurants, hotels, shopping, and attractions in the Vallejo area. As you can see by the map of Vallejo some of the nearby cities include Crockett, American Canyon, Rodeo, Port Costa and Hercules. For you map buffs, the Vallejo latitude is 38.1041, the longitude is -122.257, and the elevation of Vallejo is 21 feet. An interesting fact is that the Vallejo city population is 120,446 which equates to approximately 29.6 percent of the 407,234 residents in Solano County.</p>
 			  </div>
 			</div>
 		</section>
@@ -205,7 +214,9 @@
 			    <h3>Manresa State Beach</h3>
 			  </div>
 			  <div class="modal-body">
-			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo at felis vitae facilisis. Cras volutpat fringilla nunc vitae hendrerit. Donec porta id augue quis sodales. Sed sit amet metus ornare, mattis sem at, dignissim arcu. Cras rhoncus ornare mollis. Ut tempor augue mi, sed luctus neque luctus non. Vestibulum mollis tristique blandit. Aenean condimentum in leo ac feugiat. Sed posuere, est at eleifend suscipit, erat ante pretium turpis, eget semper ex risus nec dolor. Etiam pellentesque nulla neque, ut ullamcorper purus facilisis at. Nam imperdiet arcu felis, eu placerat risus dapibus sit amet. Praesent at justo at lectus scelerisque mollis. Mauris molestie mattis tellus ut facilisis. Sed vel ligula ornare, posuere velit ornare, consectetur erat.</p>
+			    <p>Manresa State Beach is a state-protected beach near Watsonville in Santa Cruz County, California, USA. It is operated by the California Department of Parks and Recreation. The 138-acre (56 ha) site was established as a California state park in 1948.
+
+Manresa Beach hosts the junior lifeguard program which runs two sessions each summer, teaching lifesaving, fitness and water safety to children in Santa Cruz County. Many local surfers were once junior lifeguards in the program.[citation needed]South of Manresa State Beach is Sunset State Beach.</p>
 			  </div>
 			</div>
 		</section>
@@ -218,7 +229,13 @@
 			    <h3>Surf Beach</h3>
 			  </div>
 			  <div class="modal-body">
-			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut commodo at felis vitae facilisis. Cras volutpat fringilla nunc vitae hendrerit. Donec porta id augue quis sodales. Sed sit amet metus ornare, mattis sem at, dignissim arcu. Cras rhoncus ornare mollis. Ut tempor augue mi, sed luctus neque luctus non. Vestibulum mollis tristique blandit. Aenean condimentum in leo ac feugiat. Sed posuere, est at eleifend suscipit, erat ante pretium turpis, eget semper ex risus nec dolor. Etiam pellentesque nulla neque, ut ullamcorper purus facilisis at. Nam imperdiet arcu felis, eu placerat risus dapibus sit amet. Praesent at justo at lectus scelerisque mollis. Mauris molestie mattis tellus ut facilisis. Sed vel ligula ornare, posuere velit ornare, consectetur erat.</p>
+			    <p>Surf is an unincorporated community in Santa Barbara County, California. It lies on the Pacific coast on Vandenberg Air Force Base west of the city of Lompoc. The community is the site of Surf Beachand the Surf Amtrak Station. California State Route 246 use to run to Surf, but in 1984 the highway was truncated at Lompoc; the road from Lompoc to Surf is now West Ocean Avenue.
+
+Surf grew as a railway town after Southern Pacific Railroad built a station here for its Coast Line in 1900. In 1909, the schooner cargo ship Sibyl Marston sank off the coast south from Surf.The station at Surf became popular with U.S. Army soldiers stationed at Camp Cooke (now Vandenberg Air Force Base) during World War II. The population of the town peaked at 40, with most residents being employed with the railroad. As trains modernized, Surf experienced depopulation, to the point where Southern Pacific was only operating a telegraph station. The telegraph station closed in 1985, and it was not until 2000 that the current Surf Amtrak Station was completed. The unstaffed Amtrak station is currently the only structure left standing in Surf.
+
+Sections of Surf Beach are closed between March 1 and September 30 every year during the nesting season of the western snowy plover. The closures are in place to protect the bird under theEndangered Species Act. If a set number of trespass violations have been reached during any nesting season (currently 50), the beach is closed entirely.
+
+Two fatal shark attacks have occurred near Surf Beach: one on October 22, 2010, and the other on October 23, 2012. Travel + Leisure has listed it as one of the worst beaches for shark attacks.</p>
 			  </div>
 			</div>
 		</section>
