added video placeholder for unsupported browser, font weight changes for bodycopy

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 </div><!-- close travel-categoty -->
 
 <section id="big-video">
-    <div class="video" data-src="[FALLBACK IMAGE URL]" data-video="lib/video/roadtrip-video-clip-2.mp4" data-placeholder="[PLACEHOLDER IMAGE URL]">
+    <div class="video" data-src="img/vide-placeholder-road.jpg" data-video="lib/video/roadtrip-video-clip-2.mp4" data-placeholder="img/vide-placeholder-road.jpg">
     </div>
     <div class="overlayheadlines">
     	<div class="headlines">
@@ -282,7 +282,6 @@
 						<b>Wine</b>
 					</span>
 				</h1>
-				<!-- </section> --> <!-- cd-intro -->
     		</div>
     	</div>
     </div>
